[gd_scene load_steps=51 format=2]

[ext_resource path="res://sprites/chapter/baseChapter7.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/chapter/baseChapter3.png" type="Texture" id=7]
[ext_resource path="res://sprites/chapter/baseChapter6.png" type="Texture" id=8]
[ext_resource path="res://sprites/chapter/baseChapter4.png" type="Texture" id=9]
[ext_resource path="res://sprites/scinematics/scinematicRevive7.png" type="Texture" id=10]
[ext_resource path="res://sprites/scinematics/scinematicDie5.png" type="Texture" id=11]
[ext_resource path="res://sprites/scinematics/scinematicDie7.png" type="Texture" id=12]
[ext_resource path="res://sprites/scinematics/scinematicDie3.png" type="Texture" id=13]
[ext_resource path="res://sprites/scinematics/scinematicDie1.png" type="Texture" id=14]
[ext_resource path="res://sprites/scinematics/scinematicDie4.png" type="Texture" id=15]
[ext_resource path="res://sprites/scinematics/scinematicDie6.png" type="Texture" id=16]
[ext_resource path="res://sprites/scinematics/scinematicDie2.png" type="Texture" id=17]
[ext_resource path="res://sprites/scinematics/scinematicRevive3.png" type="Texture" id=18]
[ext_resource path="res://sprites/scinematics/scinematicRevive4.png" type="Texture" id=19]
[ext_resource path="res://sprites/scinematics/scinematicRevive5.png" type="Texture" id=20]
[ext_resource path="res://sprites/scinematics/scinematicRevive1.png" type="Texture" id=21]
[ext_resource path="res://sprites/scinematics/scinematicRevive6.png" type="Texture" id=22]
[ext_resource path="res://sprites/scinematics/scinematicRevive2.png" type="Texture" id=23]
[ext_resource path="res://sprites/chapter/baseChapter12.png" type="Texture" id=24]
[ext_resource path="res://sprites/chapter/baseChapter13.png" type="Texture" id=25]
[ext_resource path="res://sprites/key/key1.png" type="Texture" id=26]
[ext_resource path="res://sprites/background/lightbg1.png" type="Texture" id=27]
[ext_resource path="res://sprites/background/bgtest1.png" type="Texture" id=29]
[ext_resource path="res://scenes/Iteraction.tscn" type="PackedScene" id=30]
[ext_resource path="res://sprites/chapter/stairs3.png" type="Texture" id=31]
[ext_resource path="res://sprites/chapter/stairs4.png" type="Texture" id=32]
[ext_resource path="res://sprites/chapter/stairs1.png" type="Texture" id=33]
[ext_resource path="res://sprites/chapter/stairs2.png" type="Texture" id=34]
[ext_resource path="res://sprites/chapter/baseChapter2.png" type="Texture" id=36]
[ext_resource path="res://sprites/chapter/baseChapter1.png" type="Texture" id=37]
[ext_resource path="res://sprites/chapter/baseChapter5.png" type="Texture" id=38]
[ext_resource path="res://sprites/chapter/baseChapter8.png" type="Texture" id=39]
[ext_resource path="res://sprites/chapter/baseChapter9.png" type="Texture" id=40]
[ext_resource path="res://sprites/chapter/baseChapter10.png" type="Texture" id=41]
[ext_resource path="res://sprites/chapter/baseChapter11.png" type="Texture" id=42]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.59016
height = 28.6429

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.1027
height = 26.5667

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 12 ) ],
"loop": true,
"name": "die",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 10 ) ],
"loop": true,
"name": "respawn",
"speed": 15.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "idleLeft"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 37 ), ExtResource( 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "idleRight"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 37 ), ExtResource( 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "jumpLeft"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.31247, -0.420448 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.31247, 0.105115 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.840897, 0.105115 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.840897, -0.525558 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.733, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.523, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.94314, 4.94719e-06 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.048, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 38 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.312, 0 ), Vector2( -2.312, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.312, 0 ), Vector2( -2.312, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 38 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.625, 0 ), Vector2( 4.625, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.625, 0 ), Vector2( 4.625, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 32 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 33 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.556638, -3.50481 )
scale = Vector2( 1.54268, 1.59768 )
texture = ExtResource( 25 )
flip_h = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -2.733, 0 )
shape = SubResource( 1 )

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -2.523, 0 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
process_mode = 0
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
position = Vector2( 768, 384 )
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 800, 470 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( -359.296, -142.187 )
scale = Vector2( 3.12024, 3.66505 )
texture = ExtResource( 29 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 800, 470 )
__meta__ = {
"_edit_group_": true
}

[node name="lightbg1" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
position = Vector2( 480, 256 )
scale = Vector2( 3.66096, 3.66325 )
texture = ExtResource( 27 )

[node name="DieAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0.213608, 0.213604 )
scale = Vector2( 16.0134, 9.03809 )
z_index = 5
frames = SubResource( 3 )
animation = "die"

[node name="RespawnAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0.707104, 0.274813 )
scale = Vector2( 16.0442, 9.06311 )
z_index = 5
frames = SubResource( 4 )
animation = "respawn"

[node name="Iteraction" parent="." instance=ExtResource( 30 )]
visible = false
position = Vector2( -0.0331573, -26.1141 )
frame = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ContainerKey" type="HBoxContainer" parent="CanvasLayer"]
visible = false
margin_right = 626.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key" type="TextureRect" parent="CanvasLayer/ContainerKey"]
margin_right = 32.0
margin_bottom = 64.0
texture = ExtResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idleLeft"
anims/idleLeft = SubResource( 5 )
anims/idleRight = SubResource( 6 )
anims/jumpLeft = SubResource( 7 )
anims/jumpRight = SubResource( 8 )
anims/landLeft = SubResource( 9 )
anims/landRight = SubResource( 10 )
anims/runLeft = SubResource( 11 )
anims/runRight = SubResource( 12 )
anims/stairs = SubResource( 13 )
anims/stairsIdle = SubResource( 14 )
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Player_area_exited"]
